[package]
name = "rcv_dev"
version = "0.1.0"
authors = ["bosley <bosley117@gmail.com>"]
edition = "2018"

[workspace]
members = [".", "imsource"]

[[bin]]
name = "demo"
path = "src/main.rs"


[[bin]]
name = "basic_contour"
path = "src/basic_contour/main.rs"

[dependencies]
clap = "2.33.3"

opencv = "0.46"
imsource   = { path = "./imsource" }
